<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">correpicos</string>
    <string name="app_version">correpicos 1.0 - correpicos@gmail.com</string>
    <string name="OSM_credits">powered by osmdroid lib and OSM data \n © OpenStreetMap contributors, CC BY-SA</string>
    <string name="startTrakingLbl">start</string>
    <string name="parcial">partial</string>
    <string name="noinit">not started</string>
    <string name="init">started</string>
    <string name="GPSUpdateTimelbl">act (s)</string>
    <string name="GPSUpdateDistlbl">act (m)</string>
    <string name="numPnts"> points</string>
    <string name="ResumeTrackingLbl">resume</string>
    <string name="PauseTrackingLbl">pause</string>
    <string name="startRegistra">Register</string>
    <string name="displayTiempoLbl">time</string>
    <string name="displayTiempoFormatoLbl">time (hh:mm)</string>      
    <string name="displayVelocidadLblKmh">Km/h: </string>
    <string name="displayVelocidadLblMms">speed</string>
    <string name="displayDistanciaLbl">Km</string>
    <string name="paraRegistroLbl">stop</string>
    <string name="listaSesiones">previous sessions</string>
    <string name="sin_sesiones">No sessions stored</string>
    <string name="verTodosPuntosLbl">All</string>
    <string name="verPorKmLbl">Each Km</string>
    <string name="confDeportes">Configuration</string>
    <string name="salvar">Save</string>
    <string name="volver">Cancel</string>
    <string name="gapdist">GPS point each (meters)</string>
    <string name="gaptmp">GPS point each (seconds)</string>
    <string name="nombre">Name:</string>
    <string-array name="listasesionesmenu">
        <item >Delete</item>
    </string-array>
    <string name="salvaSesionKMLlbl">Export</string>
    <string name="archexportadotxt">File exported:</string>
    <string name="errorarchexportadotxt">ERROR exporting</string>
    <string name="CCServiceLocationListener">correPicos registering...</string>
    <string name="CCServiceLocationListenerLabel">Lets go</string>
    <string name="umbralAutoPauselbltxt">Auto pause threshold (km/h)</string>
    <string name="activarumbralAutoPauselbltxt">Auto pause activation</string>
    <string name="tablaAcumSemLbl">Weeks</string>
    <string name="tablaAcumMesLbl">Months</string>
    <string name="tablaAcumAnoLbl">Years</string>
    <string name="altAcumLbl">drop</string>
    <string name="autopauseLbl">auto pause active</string>
    <string name="numero">#</string>
    <string name="startRegistraLbl">register</string>
    <string name="listaSesionesLbl">analyze</string>
    <string name="confDeportesLbl">configure</string>
    <string name="exportando">Generating file...</string>
    <string name="cargando">Loading points...</string>
    <string name="noDesc">No description</string>
    <string name="SesionSalvada">Session saved</string>
    <string name="defaultConfig">Default values</string>
    <string name="addSesionlbl">Add</string>
    <string name="addSesionFulllbl">add sesion</string>
    <string name="date">Date</string>
    <string name="sesionDesnivelPosLbl">Positive acumulated drop</string>
    <string name="sesionDesnivelNegLbl">Negative acumulated drop</string>
    <string name="sesionDurError">Please review the time value</string>
    <string name="sesionKmError">Please review the distance value</string>
    <string name="sesiondesc">Description</string>
    <string name="showStaredlbl">show stared</string>
    <string name="showAlllbl">show all</string>
    <string name="Intervaloslbl">intervals</string>
    <string name="configSaved">configuration saved</string>
    <string name="roundslbl">Rounds</string>
    <string name="preparalbl">Prepare</string>
    <string name="trotalbl">Slow</string>
    <string name="correlbl">Fast</string>
    <string name="importarSesionlbl">Import</string>
    <string name="importando">importing sessions ...</string>
    
        
</resources>