<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    
    <LinearLayout
            android:id="@+id/toobal"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="0dp"
            android:background="@drawable/fondo_toolbar"
            android:baselineAligned="false" >

            <Button
                android:id="@+id/cierra"
                android:background="@drawable/boton_menu_cancel_estados"
                android:layout_height="40dp" 
                android:layout_width="40dp"/>
            
		    <TextView
		        android:id="@android:id/empty"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:text="@string/Intervaloslbl"
		        android:textColor="#99000000"
		        android:textSize="30dp"
		        android:textStyle="bold"
		        android:layout_weight="1" 
		        android:gravity="center" />
		    
		     
    			
    	</LinearLayout>
        
    
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_weight="1">
        
		    <TextView
				android:id="@+id/preparalbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/preparalbl" />
		        
		    <EditText
		        android:id="@+id/prepara"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="numberDecimal" 
		        android:text="60" />
	    
	    </LinearLayout>  
    
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_weight="1">
        
		    <TextView
				android:id="@+id/rondasLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/roundslbl" />
		        
		    <EditText
		        android:id="@+id/rondas"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="numberDecimal" 
		        android:text="8" />
	    
	    </LinearLayout> 
	    
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_weight="1">
        
		    <TextView
				android:id="@+id/trotalbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/trotalbl" />
		        
		    <EditText
		        android:id="@+id/trota"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="numberDecimal" 
		        android:text="60" />
	    
	    </LinearLayout> 
	    
    	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:layout_weight="1">
        
		    <TextView
				android:id="@+id/correlbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/correlbl" />
		        
		    <EditText
		        android:id="@+id/corre"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="numberDecimal"
		        android:text="60"  />
	    
	    </LinearLayout>
        
        
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10sp">

        <Button
            android:id="@+id/OK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_weight="1" 
            android:textColor="#03be10"
		    android:textSize="30dp"
		    android:textStyle="bold"
            android:background="@drawable/etados_botones" 
            />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver" 
            android:layout_weight="2"
            android:textColor="#be2203"
		    android:textSize="20dp"
		    android:textStyle="bold"
            android:background="@drawable/etados_botones" />
        
        

    </LinearLayout>

</LinearLayout>