<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <LinearLayout
            android:id="@+id/toobal"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="0dp"
            android:background="@drawable/fondo_toolbar"
            android:baselineAligned="false" >

            <Button
                android:id="@+id/cierra"
                android:background="@drawable/boton_menu_cancel_estados"
                android:layout_height="40dp" 
                android:layout_width="40dp"/>
            
		    <TextView
		        android:id="@android:id/empty"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="2dp"
		        android:text="@string/addSesionFulllbl"
		        android:textColor="#99000000"
		        android:textSize="30dp"
		        android:textStyle="bold"
		        android:layout_weight="1" 
		        android:gravity="center" />
		    
		     
    			
    	</LinearLayout>
        
    
    
    
    <TextView
		android:id="@+id/sesionDateLbl"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="10sp"
		android:text="@string/date" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
    
	    <EditText
	        android:id="@+id/sesionDate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="none" 
	        android:layout_weight="1" android:cursorVisible="false">
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/sesionTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="time" 
	        android:layout_weight="1"/>
	    
    </LinearLayout>
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
    
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_weight="1">
        
		    <TextView
				android:id="@+id/sesionKmLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="10sp"
				android:text="@string/displayDistanciaLbl" />
		        
		    <EditText
		        android:id="@+id/sesionKm"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="numberDecimal"  />
	    
	    </LinearLayout>
	    
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_weight="1">
	
		    <TextView
				android:id="@+id/sesionDurLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="10sp"
				android:text="@string/displayTiempoFormatoLbl" />
		    <EditText
		        android:id="@+id/sesionDur"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:digits="1234567890:"
		        android:inputType="number"  />
		
		</LinearLayout>
	    
    
    </LinearLayout>
    
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
    
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_weight="1">
    
		    <TextView
				android:id="@+id/sesionDesnivelPosLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="10sp"
				android:text="@string/sesionDesnivelPosLbl" />
		    <EditText
		        android:id="@+id/sesionDesnivelPos"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="number"/>
		    
		 </LinearLayout>
	    
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
		    android:layout_weight="1">
		    
		 	<TextView
				android:id="@+id/sesionDesnivelNegLbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="10sp"
				android:text="@string/sesionDesnivelNegLbl" />
		    <EditText
		        android:id="@+id/sesionDesnivelNeg"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="number"/>

   		</LinearLayout>
	    
    
    </LinearLayout>
    
    <TextView
		android:id="@+id/sesionDescLbl"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="10sp"
		android:text="@string/sesiondesc" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1">
        
		<EditText
			android:id="@+id/sesionDesc"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>
		
		<RatingBar
			android:id="@+id/ratingPuntosSesion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:numStars = "1"	        
			android:layout_gravity="top"/>
	</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10sp">

        <Button
            android:id="@+id/OK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_weight="1" 
            android:textColor="#03be10"
		    android:textSize="30dp"
		    android:textStyle="bold"
            android:background="@drawable/etados_botones" 
            />

        <Button
            android:id="@+id/Cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver" 
            android:layout_weight="2"
            android:textColor="#be2203"
		    android:textSize="20dp"
		    android:textStyle="bold"
            android:background="@drawable/etados_botones" />
        
        

    </LinearLayout>

</LinearLayout>